k8s-manifests/wordpress/wordpress-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-test
  namespace: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-test
  template:
    metadata:
      labels:
        app: wordpress-test
    spec:
      containers:
      - name: wordpress
        image: wordpress:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: wordpress-data
          mountPath: /var/www/html
      volumes:
      - name: wordpress-data
        persistentVolumeClaim:
          claimName: wordpress-pv-claim
